test/asm/macro-arg-in-string.err
error: macro-arg-in-string.asm(12):
    Illegal character escape '!'
Assembly aborted with 1 error!
